[package]
name = "hf-rust-inference"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
rig-core = {version= "0.24.0", features = ["audio"]}
tokio = {version = "1.43.0", features = ["full"]}
serde = {version = "1.0.219", features = ["derive"]}
thiserror = "1.0.69"
serde_json = "1.0.139"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
tempfile = "3"

